@@ -1,3 +1,8 @@
+2008-10-14  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil/SecurityDeclarationReader.cs: protect against
+	wrongly formatted security attributes.
+
 2008-10-12  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Mono.Cecil.Cil/SymbolStoreHelper.cs: Change two "static readonly"
